--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
     "48": "piaget_icon.png",
     "128": "piaget_icon.png"
   },
+  "author": "João Ribeiro",
   "permissions": [
     "storage",
     "activeTab"
